--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,2 +1,9 @@
-FROM scratch
-# todo multi-stage build
+FROM golang:latest as builder
+WORKDIR /src
+ADD . /src/
+
+RUN CGO_ENABLED=0 GOOS=linux go build -o build .
+
+FROM scratch as prod
+COPY --from=builder /src/build /
+CMD ["./build"]
