--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,13 @@
 services:
   backend:
     build: backend
+  nginx:
+    image: nginx:latest
+    volumes:
+      - type: bind
+        source: ./nginx/nginx.conf
+        target: /etc/nginx/conf.d/default.conf
     ports:
       - "3000:3000"
+    depends_on:
+      - backend
