--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,11 @@
 server {
-    listen 3001;
+    listen 8080;
     server_name localhost;
     location ~* \.(eot|ttf|woff|woff2)$ {
         add_header Access-Control-Allow-Origin *;
     }
     location / {
-        proxy_pass http://backend:3002;
+        root /frontend/;
+        index index.html index.htm;
     }
 }
