--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,8 @@ server {
     location ~* \.(eot|ttf|woff|woff2)$ {
         add_header Access-Control-Allow-Origin *;
     }
-    location / {
+    location /frontend/ {
+        proxy_pass http://localhost:8081;
         root /frontend/;
         index index.html index.htm;
     }
