Metsraal: the third impact

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,9 +4,11 @@ server {
     location ~* \.(eot|ttf|woff|woff2)$ {
         add_header Access-Control-Allow-Origin *;
     }
-    location /frontend/ {
-        proxy_pass http://localhost:8081;
-        root /frontend/;
-        index index.html index.htm;
+
+    root /etc/static/;
+    index index.html;
+
+    location /register {
+        proxy_pass http://localhost:8081/register;
     }
 }
