--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,7 @@ services:
     image: nginx:latest
     volumes:
     - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    - ./frontend/:/etc/static/
     ports:
       - "8080:8080"
     depends_on:
