--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,6 @@ server {
     index index.html;
 
     location /register {
-        proxy_pass http://localhost:8081/register;
+        proxy_pass http://backend:8081/register;
     }
 }
