--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,20 @@
 server {
     listen 8080;
     server_name localhost;
-    location ~* \.(eot|ttf|woff|woff2)$ {
-        add_header Access-Control-Allow-Origin *;
-    }
 
     root /etc/static/;
-    index index.html;
+    index index.html index.htm;
 
-    location /register {
-        proxy_pass http://backend:8081/register;
+    location /api/ {
+        proxy_pass http://backend:8081/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
+
+
+    access_log /var/log/nginx/survey-platform.access.log;
+    error_log /var/log/nginx/survey-platform.error.log;
 }
