--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
     index index.html index.htm;
 
     location /api/ {
-        proxy_pass http://backend:8081/;
+        proxy_pass http://backend:8081;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
